tests/NormalTests/paczka1/fuzzy1/11752523.err
Error in line 2: ktoTx94 A353 34,9
Error in line 3: ktoTx94 S683 22,6
Error in line 8: dJmhrIKAC S683 77,4
